k8s/frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: eba-dashboard-app
  namespace: data-ingestion
spec:
  selector:
    app: eba-dashboard-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
